cabal-version: >=1.16
name:           cpython
version:        3.9.0.0
synopsis:       Bindings for libpython
description:    Please see the README on GitHub at <https://github.com/schnecki/haskell-cpython#readme>
category:       Foreign
homepage:       https://github.com/schnecki/gym-haskell#readme
bug-reports:    https://github.com/schnecki/gym-haskell/issues
author:         see original repository, John Millikin, Manuel Schneckenreither
maintainer:     manuel.schneckenreither@uibk.ac.at
copyright:      2019 Manuel Schneckenreither
license:        GPL-3
build-type:     Simple
extra-source-files:
    cbits/hscpython-shim.h


source-repository head
  type: git
  location: https://github.com/schnecki/gym-haskell

library
  exposed-modules:
    CPython
    CPython.Types
    CPython.Types.ByteArray
    CPython.Types.Bytes
    CPython.Types.Capsule
    CPython.Types.Cell
    CPython.Types.Code
    CPython.Types.Complex
    CPython.Types.Dictionary
    CPython.Types.Exception
    CPython.Types.Float
    CPython.Types.Function
    CPython.Types.InstanceMethod
    CPython.Types.Integer
    CPython.Types.Iterator
    CPython.Types.List
    CPython.Types.Method
    CPython.Types.Module
    CPython.Types.Set
    CPython.Types.Slice
    CPython.Types.Tuple
    CPython.Types.Type
    CPython.Types.Unicode
    CPython.Types.WeakReference
    CPython.Protocols.Iterator
    CPython.Protocols.Mapping
    CPython.Protocols.Number
    CPython.Protocols.Object
    CPython.Protocols.Object.Enums
    CPython.Protocols.Sequence
    CPython.Constants
    CPython.Reflection
    CPython.System
  other-modules:
    CPython.Internal

  hs-source-dirs:
      src
  include-dirs:
      cbits

  ghc-options: -Wall -O2 -fno-warn-orphans
  cc-options: -fPIC

  build-depends:
      base >=4.7 && <5
    , bytestring >=0.9
    , text
  c-sources:
      cbits/hscpython-shim.c

  build-tools:
      c2hs >=0.15
  pkgconfig-depends: python-3.9
  default-language: Haskell98

test-suite cpython-tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
    test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  cc-options: -fPIC
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.9
    , chell >=0.3
    , cpython
    , hspec
    , text
    , transformers
  default-language: Haskell98
  extra-libraries:
   python3.9
